Update DiscoveryResponse to be UCP-compliant
